--- a/_header.html.erb
+++ b/_header.html.erb
@@ -12,6 +12,7 @@
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="/dashboard/index.html">Dashboard</a></li>
                     <li><a href="/secret/index.html">Secret</a></li>
+                    <li><a href="/secret/use_special_layout.html">Secret 2</a></li>
                     <li><a href="/about.html">About</a></li>
                 </ul>
                 <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
