add lorem helpers demo

--- a/_header.html.erb
+++ b/_header.html.erb
@@ -13,6 +13,7 @@
                     <li><a href="/dashboard/index.html">Dashboard</a></li>
                     <li><a href="/secret/index.html">Secret</a></li>
                     <li><a href="/secret/use_special_layout.html">Secret 2</a></li>
+                    <li><a href="/lorem.html">Lorem Helpers</a></li>
                     <li><a href="/about.html">About</a></li>
                 </ul>
                 <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
