--- a/lorem.html.erb
+++ b/lorem.html.erb
@@ -1,7 +1,7 @@
+<h1>Lorem Helpers</h1>
+
 <p><%= lorem_sentence %></p>
-
 <p><%= lorem_words 5 %></p>
-
 <p><%= lorem_word %></p>
 <p><%= lorem_paragraphs 10 %></p>
 <p><%= lorem_paragraph %></p>
@@ -16,3 +16,14 @@
 <img src="<%= lorem_image('300x400', :random_color => true) %>">
 <img src="<%= lorem_image('300x400', :text => lorem_word) %>">
 
+<h1>Chinese Version (from our <a href="http://more.handlino.com/">MoreText</a> service)</h1>
+
+<p><%= zh_lorem_sentence %></p>
+<p><%= zh_lorem_words 5 %></p>
+<p><%= zh_lorem_word %></p>
+<p><%= zh_lorem_paragraphs 10 %></p>
+<p><%= zh_lorem_paragraph %></p>
+<p><%= zh_lorem_name %></p>
+<p><%= zh_lorem_first_name %></p>
+<p><%= zh_lorem_last_name %></p>
+<p><%= zh_lorem_email %></p>
