use livereload_js helper

--- a/_layout.html.erb
+++ b/_layout.html.erb
@@ -85,8 +85,6 @@
         <script src="/javascripts/bootstrap-collapse.js"></script>
         <script src="/javascripts/bootstrap-carousel.js"></script>
         <script src="/javascripts/bootstrap-typeahead.js"></script>
-        <script>
-            document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-        </script>
+        <%= livereload_js %>
     </body>
 </html>
